@@ -1,5 +1,10 @@
 2005-01-06  Bruno Haible  <bruno@clisp.org>
 
+	* strtol.c: Update from gnulib.
+	* strtoul.c: Update from gnulib.
+
+2005-01-06  Bruno Haible  <bruno@clisp.org>
+
 	* strstr.c: Update from gnulib.
 
 2005-01-06  Bruno Haible  <bruno@clisp.org>
